# cs2-cheat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
ports/freetype/: portfile.cmake  usage  vcpkg.json
ports/minhook/: fix-usage.patch  portfile.cmake
src/: main.cpp
src/context/: config.hpp  cs2.hpp  memory.hpp
src/core/hash/: fnv1a.hpp
src/core/helpers/: entities.cpp  entities.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  memory.cpp  memory.hpp  render.cpp  render.hpp  schema.cpp  schema.hpp
src/core/hooks/: hooks.cpp  hooks.hpp
src/core/hooks/functions/: framestagenotify.cpp  mouseinputenabled.cpp  present.cpp  resizebuffers.cpp
src/core/source2_engine/: cgameentitysystem.hpp  crenderdevicedx11.hpp  crendergamesystem.hpp  iappsystem.hpp  iinputsystem.hpp  ilocalize.hpp  ischemasystem.hpp  isource2client.hpp  isource2engine.hpp
src/core/source2_engine/datatypes/: ccollisionproperty.hpp  centityhandle.hpp  cgamescenenode.hpp  cinterlockedint.hpp  cmodel.hpp  cskeletoninstance.hpp  cstronghandle.hpp  ctransform.hpp  cutlmemory.hpp  cutlmemorypool.hpp  cutlstring.hpp  cutltshash.hpp  cutlvector.hpp  resourcebinding_t.hpp
src/core/source2_engine/entities/: c_basecombatcharacter.hpp  c_baseentity.hpp  c_baseflex.hpp  c_basemodelentity.hpp  c_baseplayerpawn.hpp  c_csplayerpawn.hpp  cbaseanimgraph.hpp  cbaseplayercontroller.hpp  ccsplayercontroller.hpp  centityinstance.hpp
src/core/types/: color_t.hpp  matrix_t.hpp  qangle_t.hpp  quaternion_t.hpp  vector_t.hpp
src/core/ui/: menu.cpp  menu.hpp
src/features/: esp.cpp  esp.hpp
triplets/: x64-windows-llvm-static.cmake
triplets/toolchain/: x64-windows-llvm-static.cmake
